--- a/megad-core/build.gradle
+++ b/megad-core/build.gradle
@@ -1,7 +1,17 @@
 group 'ru.ittim.openhab'
 version '0.3'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 sourceCompatibility = 1.8
 
@@ -10,8 +20,5 @@ repositories {
 }
 
 dependencies {
-    compile 'org.apache.logging.log4j:log4j-core:2.7'
-    compile 'org.apache.logging.log4j:log4j-api:2.7'
     compile 'org.apache.httpcomponents:httpclient-win:4.5.2'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
